[package]
name = "snake"
version = "0.1.0"
authors = [ "Dylan Park <dylan.park@att.net>", "Nathan Stocks <nathan@agileperception.com>" ]
edition = "2021"
description = "Open source terminal arcade game with audio - based off of the classic 'Snake'"
homepage = "https://github.com/dylan-park/r_snake"
repository = "https://github.com/dylan-park/r_snake"
readme = "README.md"
keywords = [ "terminal", "game", "audio", "rusty" ]
categories = [ "games", "command-line-utilities" ]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"
rusty_audio = "1.2"
rusty_time = "0.11.0"
